removed bug with contact information bar being too close around 600px

--- a/stylesheets/_about.scss
+++ b/stylesheets/_about.scss
@@ -74,6 +74,3 @@
 
 }
 
-@media screen and (min-width: 2000px){
-
-}
