--- a/stylesheets/_contact.scss
+++ b/stylesheets/_contact.scss
@@ -84,3 +84,8 @@
 }
 
 
+@media screen and (max-width: 960px){
+    .contactWrapper {
+        margin-top: 100px;
+    }
+}
